Remove not needed JpaDistributionSetType.compatibleToTargetTypes
Signed-off-by: Avgustin Marinov <Avgustin.Marinov@bosch.com>